--- a/My_C_Code/Scripts/Cabinet_test.ipynb
+++ b/My_C_Code/Scripts/Cabinet_test.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "source": [
     "from Cabinet_Test import Cabinet\r\n",
     "import sys\r\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "source": [
     "from AMDC import AMDC"
    ],
@@ -63,9 +63,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "source": [
-    "Vdc = 50\r\n",
+    "Vdc = 10\r\n",
     "amdc = AMDC(port = 'COM13', cmdEcho = True, printOutput=True)\r\n",
     "cabinet = Cabinet(Vdc, amdc, debug = False)   "
    ],
@@ -74,10 +74,10 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "\t> cabinet setup 50.00000\n",
-      "['cabinet setup 50.00000', 'UNKNOWN CMD']\n",
+      "\t> cabinet setup 10.00000\n",
+      "['cabinet setup 10.00000', 'SUCCESS']\n",
       "\t> cabinet init_cb\n",
-      "['cabinet init_cb', 'UNKNOWN CMD']\n"
+      "['cabinet init_cb', 'FAILURE']\n"
      ]
     }
    ],
@@ -85,9 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "source": [
-    "cabinet.enable_pwm()\r\n"
+    "cabinet.enable_pwm()\r\n",
+    "cabinet.openloop_vsi_3(5, 50, 5)\r\n",
+    "cabinet.openloop_vsi_3_disable(5)"
    ],
    "outputs": [
     {
@@ -95,7 +97,20 @@
      "name": "stdout",
      "text": [
       "\t> hw pwm on\n",
-      "['hw pwm on', 'SUCCESS']\n"
+      "['hw pwm on', 'FAILURE']\n",
+      "\t> cabinet openloop_vsi_3 5 50.000000 5.000000\n",
+      "['cabinet openloop_vsi_3 5 50.000000 5.000000', 'SUCCESS']\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "TypeError",
+     "evalue": "openloop_vsi_3_disable() missing 1 required positional argument: 'inverter'",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-92e694a72639>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcabinet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0menable_pwm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mcabinet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopenloop_vsi_3\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m50\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mcabinet\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopenloop_vsi_3_disable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: openloop_vsi_3_disable() missing 1 required positional argument: 'inverter'"
      ]
     }
    ],
@@ -113,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "source": [
     "\r\n",
     "cabinet.disconnect()"
@@ -162,9 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "source": [
-    "amdc.connect()"
+    "amdc.disconnect()"
    ],
    "outputs": [],
    "metadata": {}
@@ -305,9 +320,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -319,7 +333,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.7.3"
+  },
+  "interpreter": {
+   "hash": "b3ba2566441a7c06988d0923437866b63cedc61552a5af99d1f4fb67d367b25f"
   }
  },
  "nbformat": 4,
