fix viable transfer issues

--- a/My_C_Code/Scripts/Cabinet_test.ipynb
+++ b/My_C_Code/Scripts/Cabinet_test.ipynb
@@ -29,10 +29,8 @@
    "cell_type": "code",
    "execution_count": 41,
    "source": [
-    "from Cabinet_Test import Cabinet\r\n",
+    "from Cabinet_Test import cmd\r\n",
     "import sys\r\n",
-    "\r\n",
-    "\r\n",
     "sys.path.append(r'..\\AMDC-Firmware\\scripts')"
    ],
    "outputs": [],
@@ -57,40 +55,32 @@
    "metadata": {}
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "source": [
-    "Set up CRAMB and AMDC"
+    "Vdc = 20\r\n",
+    "cmd = cmd(Vdc, amdc, debug = False)   "
    ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "source": [
-    "Vdc = 20\r\n",
-    "cabinet = Cabinet(Vdc, amdc, debug = False)   "
+    "cmd.enable_pwm()\r\n",
+    "cmd.phase_volts_3p(10,0,0,2)"
    ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\t> cabinet setup 20.00000\n",
-      "['cabinet setup 20.00000', 'SUCCESS']\n",
-      "\t> cabinet init_cb\n",
-      "['cabinet init_cb', 'SUCCESS']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": 44,
    "source": [
-    "cabinet.enable_pwm()\r\n",
-    "cabinet.openloop_vsi_3(5, 10, 10)\r\n",
-    "cabinet.openloop_vsi_3_enable(5)"
+    "cmd.init_twin_ctrl()\r\n",
+    "cmd.twin_set_vdc(20)\r\n",
+    "cmd.twin_enable_ctrl()"
    ],
    "outputs": [
     {
@@ -110,9 +100,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "cmd.enable_pwm()"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
    "execution_count": 46,
    "source": [
-    "cabinet.openloop_vsi_3(5, 5, 3)"
+    "cmd.twin_set_trq(0,0)\r\n",
+    "cmd.twin_set_s1(0,0)\r\n",
+    "cmd.twin_set_s1(0,0)\r\n",
+    "cmd.twin_set_freq(10)"
    ],
    "outputs": [
     {
@@ -130,7 +132,8 @@
    "cell_type": "code",
    "execution_count": 47,
    "source": [
-    "cabinet.disable_pwm()"
+    "cmd.twin_disable_ctrl()\r\n",
+    "cmd.disable_pwm()"
    ],
    "outputs": [
     {
@@ -149,7 +152,7 @@
    "execution_count": 19,
    "source": [
     "\r\n",
-    "cabinet.disconnect()"
+    "cmd.disconnect()"
    ],
    "outputs": [],
    "metadata": {
@@ -206,6 +209,8 @@
    "cell_type": "code",
    "execution_count": 26,
    "source": [
+    "cmd.twin_enable_log()\r\n",
+    "\r\n",
     "mapfile_path = find_mapfile(repo_dir)\r\n",
     "logger = AMDC_Logger(AMDC = amdc, mapfile = mapfile_path)\r\n",
     "logger.sync()\r\n",
