add reset and deinit regulators

--- a/My_C_Code/Scripts/Cabinet_test.ipynb
+++ b/My_C_Code/Scripts/Cabinet_test.ipynb
@@ -77,67 +77,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
-   "source": [
-    "cmd.enable_pwm()\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\t> hw pwm on\n",
-      "['hw pwm on', 'SUCCESS']\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 119,
-   "source": [
-    "cmd.phase_volts_3p(0,-10,0,5)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\t> cabinet phv3 5 0.00000 -10.00000 0.00000\n",
-      "['cabinet phv3 5 0.00000 -10.00000 0.00000', 'SUCCESS']\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 247,
-   "source": [
-    "cmd.disable_pwm()\r\n",
-    "cmd.twin_disable_ctrl()\r\n"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\t> hw pwm off\n",
-      "['hw pwm off', 'FAILURE']\n",
-      "\t> twin disable_ctrl\n",
-      "['twin disable_ctrl', 'SUCCESS']\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 257,
    "source": [
     "cmd.init_twin_ctrl()\r\n",
     "cmd.twin_set_vdc(20)\r\n",
+    "cmd.twin_set_trq(0,0)\r\n",
+    "cmd.twin_set_s1(0,0)\r\n",
+    "cmd.twin_set_s2(0,0)\r\n",
+    "cmd.twin_set_freq(0)\r\n",
+    "cmd.enable_pwm()\r\n",
     "cmd.twin_enable_ctrl()"
    ],
    "outputs": [
@@ -158,31 +106,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
-   "source": [
-    "cmd.enable_pwm()"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "\t> hw pwm on\n",
-      "['hw pwm on', 'SUCCESS']\n"
-     ]
-    }
-   ],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
    "execution_count": 250,
    "source": [
     "cmd.twin_set_trq(0,0)\r\n",
     "cmd.twin_set_s1(0,0)\r\n",
     "cmd.twin_set_s2(0,0)\r\n",
-    "cmd.twin_set_freq(0)\r\n",
-    "cmd.enable_pwm()"
+    "cmd.twin_set_freq(0)\r\n"
    ],
    "outputs": [
     {
