add code for k_delta update

--- a/My_C_Code/Scripts/BIM_SysID.ipynb
+++ b/My_C_Code/Scripts/BIM_SysID.ipynb
@@ -68,9 +68,7 @@
    "execution_count": null,
    "source": [
     "cmd.BIM_enable_ctrl()\r\n",
-    "cmd.BIM_enable_ob()\r\n",
-    "cmd.BIM_enable_vctrl()\r\n",
-    "cmd.BIM_set_id(2)\r\n"
+    "cmd.BIM_enable_ob()"
    ],
    "outputs": [],
    "metadata": {}
@@ -122,7 +120,7 @@
     "#logger.register('Ia1_a Ia1_b Ia1_c Ib1_a Ib1_b Ib1_c Ia2_a Ia2_b Ia2_c Ib2_a Ib2_b Ib2_c', samples_per_sec = 1000, var_type = 'double')\r\n",
     "#logger.register('theta_rm wrm wsl theta_e we Itq_d_ref Itq_q_ref Itq_d Itq_q Te', samples_per_sec = 1000, var_type = 'double')\r\n",
     "#logger.register('theta_rm theta_e wsl', samples_per_sec = 1000, var_type = 'double')\r\n",
-    "logger.register('delta_x delta_y', samples_per_sec = 1000, var_type = 'double')\r\n",
+    "logger.register('Itq_d Itq_d_ref', samples_per_sec = 1000, var_type = 'double')\r\n",
     "\r\n",
     "\r\n",
     "\r\n",
@@ -150,14 +148,12 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
+    "cmd.BIM_enable_vctrl()\r\n",
+    "cmd.BIM_set_id(2)\r\n",
     "\r\n",
-    "#DATA IS BEING RECORDED\r\n",
-    "#time.sleep(1)\r\n",
-    "\r\n",
-    "logger.stop()\r\n",
-    "\r\n",
-    "####################   DUMP DATA AND PLOT   ####################\r\n",
-    "data = logger.dump(file = 'BIM_data_delta.csv')"
+    "#cmd.BIM_enable_levctrl()\r\n",
+    "#cmd.enable_pwm()\r\n",
+    "#cmd.twin_enable_log()"
    ],
    "outputs": [],
    "metadata": {}
@@ -167,16 +163,30 @@
    "execution_count": null,
    "source": [
     "\r\n",
-    "#data.filter(regex=\"^wrm$\").plot()\r\n",
-    "#data.filter(regex=\"^we$\").plot()\r\n",
-    "#data.filter(regex=\"^wsl$\").plot()\r\n",
-    "#data.filter(regex=\"^theta_e|theta_rm$\").plot()\r\n",
-    "#data.filter(regex=\"^theta_rm$\").plot()\r\n",
-    "#data.filter(regex=\"^Itq_d_ref|Itq_d$\").plot()\r\n",
-    "#data.filter(regex=\"^Itq_q_ref|Itq_q$\").plot()\r\n",
-    "#data.filter(regex=\"^Te$\").plot()\r\n",
+    "#DATA IS BEING RECORDED\r\n",
+    "#time.sleep(1)\r\n",
     "\r\n",
-    "data.filter(regex=\"^delta_x|delta_y$\").plot()"
+    "logger.stop()\r\n",
+    "\r\n",
+    "####################   DUMP DATA AND PLOT   ####################\r\n",
+    "data = logger.dump(file = 'BIM_data_pos.csv')"
+   ],
+   "outputs": [],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "\r\n",
+    "data.filter(regex=\"^wrm$\").plot()\r\n",
+    "#data.filter(regex=\"^we$\").plot()\r\n",
+    "data.filter(regex=\"^wsl$\").plot()\r\n",
+    "data.filter(regex=\"^theta_e|theta_rm$\").plot()\r\n",
+    "#data.filter(regex=\"^theta_rm$\").plot()\r\n",
+    "data.filter(regex=\"^Itq_d_ref|Itq_d$\").plot()\r\n",
+    "data.filter(regex=\"^Itq_q_ref|Itq_q$\").plot()\r\n",
+    "data.filter(regex=\"^Te$\").plot()"
    ],
    "outputs": [],
    "metadata": {}
