add code for force commands

--- a/My_C_Code/Scripts/BIM_SysID.ipynb
+++ b/My_C_Code/Scripts/BIM_SysID.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "source": [
     "amdc.disconnect()\r\n",
     "\r\n"
@@ -37,45 +37,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "source": [
     "from Cabinet_Test import cmd\r\n",
     "import sys\r\n",
     "sys.path.append(r'..\\AMDC-Firmware\\scripts')\r\n",
     "from AMDC import AMDC\r\n",
     "amdc = AMDC(port = 'COM13', cmdEcho = True, printOutput=True)\r\n",
-    "Vdc = 30\r\n",
+    "Vdc = 20\r\n",
     "cmd = cmd(Vdc, amdc, debug = False) "
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\t> cabinet setup 20.00000\n",
+      "['cabinet setup 20.00000', 'SUCCESS']\n",
+      "\t> cabinet init_cb\n",
+      "['cabinet init_cbENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "source": [
     "  \r\n",
     "cmd.disable_pwm()\r\n",
     "cmd.BIM_init()\r\n",
-    "cmd.BIM_set_Vdc(30)\r\n",
+    "cmd.BIM_set_Vdc(20)\r\n",
     "cmd.enable_pwm()\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\t> hw pwm off\n",
+      "['hw pwm off', 'FAILURE']\n",
+      "\t> BIM init\n",
+      "['BIM initENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n",
+      "\t> BIM set_vdc 20.000000\n",
+      "['BIM set_vdc 20.000000', 'SUCCESS']\n",
+      "\t> hw pwm on\n",
+      "['hw pwm on', 'SUCCESS']\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "source": [
     "cmd.BIM_enable_ctrl()\r\n",
     "cmd.BIM_enable_ob()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\t> BIM enable_ctrl\n",
+      "['BIM enable_ctrl', 'SUCCESS']\n",
+      "\t> BIM enable_ob\n",
+      "['BIM enable_ob', 'SUCCESS']\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 16,
    "source": [
     "import matplotlib\r\n",
     "import time\r\n",
@@ -92,7 +129,7 @@
     "# View which variables are logged\r\n",
     "logger.info()\r\n",
     "#amdc.connect()\r\n",
-    "cmd.twin_enable_log()"
+    "cmd.enable_log()"
    ],
    "outputs": [
     {
@@ -146,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "source": [
     "cmd.BIM_enable_vctrl()\r\n",
     "cmd.BIM_set_id(2)\r\n",
@@ -155,7 +192,18 @@
     "#cmd.enable_pwm()\r\n",
     "#cmd.twin_enable_log()"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\t> BIM enable_vctrl\n",
+      "['BIM enable_vctrl', 'SUCCESS']\n",
+      "\t> BIM set_id 2.000000\n",
+      "['BIM set_id 2.000000', 'SUCCESS']\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
@@ -193,53 +241,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "source": [
     "logger.unregister_all()\r\n",
     "logger.clear_all()\r\n"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n"
+     ]
+    }
+   ],
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "source": [
-    "for i in [150, 200]:\r\n",
+    "for i in [1, 2, 5, 10, 20, 30, 40, 50, 60]:\r\n",
     "   \r\n",
     "    logger.stop()\r\n",
     "    logger.unregister_all()\r\n",
     "    logger.clear_all()\r\n",
-    "    sampling = 10000\r\n",
+    "    sampling = 1000\r\n",
     "    period = 1\r\n",
     "    if i <= 10:\r\n",
-    "        sampling = 10000\r\n",
+    "        sampling = 1000\r\n",
     "        period = 1\r\n",
     "    elif i<= 100:\r\n",
-    "        sampling = 10000\r\n",
+    "        sampling = 1000\r\n",
     "        period = 0.2\r\n",
     "\r\n",
     "    else:\r\n",
-    "        sampling = 10000\r\n",
+    "        sampling = 2500\r\n",
     "        period = 0.1\r\n",
     "\r\n",
     "    logger.unregister_all()\r\n",
     "    #logger.register('Ia1_a Ia1_b Ia1_c Ib1_a Ib1_b Ib1_c Ia2_a Ia2_b Ia2_c Ib2_a Ib2_b Ib2_c', samples_per_sec = 1000, var_type = 'double')\r\n",
     "    #logger.register('Itq_d Itq_q vd_ref vq_ref Is1_x Is1_y vx_ref vy_ref', samples_per_sec = 1000, var_type = 'double')\r\n",
     "    logger.register('Itq_d vd_ref', samples_per_sec = sampling, var_type = 'double')\r\n",
-    "\r\n",
     "    ###################   COLLECT DATA   ####################\r\n",
     "    # Clear the logger, then record data\r\n",
     "   \r\n",
     "    logger.clear_all()\r\n",
-    "    vd_ref_chirp_gain     = 500 * 1e-3; # [m]\r\n",
+    "    vd_ref_chirp_gain     = 1000 * 1e-3; # [m]\r\n",
     "    vd_ref_chirp_freq_min = i; # [Hz]\r\n",
     "    vd_ref_chirp_freq_max = i; # [Hz]\r\n",
     "    vd_ref_chirp_period   = period; # [sec]\r\n",
     "    amdc.cmd(\"inj const vq_ref set 0\")\r\n",
     "    amdc.cmd(\"inj const vx_ref set 0\")\r\n",
     "    amdc.cmd(\"inj const vy_ref set 0\")\r\n",
-    "    amdc.cmd(\"inj chirp vd_ref add {:.6f} {:.6f} {:.6f} {:.6f}\".format(vd_ref_chirp_gain, vd_ref_chirp_freq_min, vd_ref_chirp_freq_max, vd_ref_chirp_period))\r\n",
+    "    amdc.cmd(\"inj chirp vd_ref set {:.6f} {:.6f} {:.6f} {:.6f}\".format(vd_ref_chirp_gain, vd_ref_chirp_freq_min, vd_ref_chirp_freq_max, vd_ref_chirp_period))\r\n",
     "\r\n",
     "    logger.start()\r\n",
     "    #DATA IS BEING RECORDED\r\n",
@@ -249,7 +305,137 @@
     "\r\n",
     "    ####################   DUMP DATA AND PLOT   ####################\r\n",
     "    filename = 'BIM_data_id_vd'+ str(i)+'.csv'\r\n",
-    "    data = logger.dump(file = filename)\r\n",
+    "    data = logger.dump(file = filename)\r\n"
+   ],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "\t> log stop\n",
+      "['log stop', 'FAILURE']\n",
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_Itq_d 1248992 1000 double\n",
+      "['log reg 0 LOG_Itq_d 1248992 1000 double', 'SUCCESS']\n",
+      "\t> log reg 1 LOG_vd_ref 1249136 1000 double\n",
+      "['log reg 1 LOG_vd_ref 1249136 1000 double', 'SUCCESS']\n",
+      "\t> log stop\n",
+      "['log stop', 'FAILURE']\n",
+      "\t> log unreg 0\n",
+      "['log unreg 0', 'SUCCESS']\n",
+      "\t> log unreg 1\n",
+      "['log unreg 1', 'SUCCESS']\n",
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_Itq_d 1248992 1000 double\n",
+      "['log reg 0 LOG_Itq_d 1248992 1000 double', 'SUCCESS']\n",
+      "\t> log reg 1 LOG_vd_ref 1249136 1000 double\n",
+      "['log reg 1 LOG_vd_ref 1249136 1000 double', 'SUCCESS']\n",
+      "\t> log stop\n",
+      "['log stop', 'FAILURE']\n",
+      "\t> log unreg 0\n",
+      "['log unreg 0', 'SUCCESS']\n",
+      "\t> log unreg 1\n",
+      "['log unreg 1', 'SUCCESS']\n",
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_Itq_d 1248992 1000 double\n",
+      "['log reg 0 LOG_Itq_d 1248992 1000 double', 'SUCCESS']\n",
+      "\t> log reg 1 LOG_vd_ref 1249136 1000 double\n",
+      "['log reg 1 LOG_vd_ref 1249136 1000 double', 'SUCCESS']\n",
+      "\t> log stop\n",
+      "['log stop', 'FAILURE']\n",
+      "\t> log unreg 0\n",
+      "['log unreg 0', 'SUCCESS']\n",
+      "\t> log unreg 1\n",
+      "['log unreg 1', 'SUCCESS']\n",
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_Itq_d 1248992 1000 double\n",
+      "['log reg 0 LOG_Itq_d 1248992 1000 double', 'SUCCESS']\n",
+      "\t> log reg 1 LOG_vd_ref 1249136 1000 double\n",
+      "['log reg 1 LOG_vd_ref 1249136 1000 double', 'SUCCESS']\n",
+      "\t> log stop\n",
+      "['log stop', 'FAILURE']\n",
+      "\t> log unreg 0\n",
+      "['log unreg 0', 'SUCCESS']\n",
+      "\t> log unreg 1\n",
+      "['log unreg 1', 'SUCCESS']\n",
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_Itq_d 1248992 1000 double\n",
+      "['log reg 0 LOG_Itq_d 1248992 1000 double', 'SUCCESS']\n",
+      "\t> log reg 1 LOG_vd_ref 1249136 1000 double\n",
+      "['log reg 1 LOG_vd_ref 1249136 1000 double', 'SUCCESS']\n",
+      "\t> log stop\n",
+      "['log stop', 'FAILURE']\n",
+      "\t> log unreg 0\n",
+      "['log unreg 0', 'SUCCESS']\n",
+      "\t> log unreg 1\n",
+      "['log unreg 1', 'SUCCESS']\n",
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_Itq_d 1248992 1000 double\n",
+      "['log reg 0 LOG_Itq_d 1248992 1000 double', 'SUCCESS']\n",
+      "\t> log reg 1 LOG_vd_ref 1249136 1000 double\n",
+      "['log reg 1 LOG_vd_ref 1249136 1000 double', 'SUCCESS']\n",
+      "\t> log stop\n",
+      "['log stop', 'FAILURE']\n",
+      "\t> log unreg 0\n",
+      "['log unreg 0', 'SUCCESS']\n",
+      "\t> log unreg 1\n",
+      "['log unreg 1', 'SUCCESS']\n",
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_Itq_d 1248992 1000 double\n",
+      "['log reg 0 LOG_Itq_d 1248992 1000 double', 'SUCCESS']\n",
+      "\t> log reg 1 LOG_vd_ref 1249136 1000 double\n",
+      "['log reg 1 LOG_vd_ref 1249136 1000 double', 'SUCCESS']\n",
+      "\t> log stop\n",
+      "['log stop', 'FAILURE']\n",
+      "\t> log unreg 0\n",
+      "['log unreg 0', 'SUCCESS']\n",
+      "\t> log unreg 1\n",
+      "['log unreg 1', 'SUCCESS']\n",
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_Itq_d 1248992 1000 double\n",
+      "['log reg 0 LOG_Itq_d 1248992 1000 double', 'SUCCESS']\n",
+      "\t> log reg 1 LOG_vd_ref 1249136 1000 double\n",
+      "['log reg 1 LOG_vd_ref 1249136 1000 double', 'SUCCESS']\n",
+      "\t> log stop\n",
+      "['log stop', 'FAILURE']\n",
+      "\t> log unreg 0\n",
+      "['log unreg 0', 'SUCCESS']\n",
+      "\t> log unreg 1\n",
+      "['log unreg 1', 'SUCCESS']\n",
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n"
+     ]
+    },
+    {
+     "output_type": "error",
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-19-c453b49914e5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     20\u001b[0m     \u001b[1;31m#logger.register('Ia1_a Ia1_b Ia1_c Ib1_a Ib1_b Ib1_c Ia2_a Ia2_b Ia2_c Ib2_a Ib2_b Ib2_c', samples_per_sec = 1000, var_type = 'double')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[1;31m#logger.register('Itq_d Itq_q vd_ref vq_ref Is1_x Is1_y vx_ref vy_ref', samples_per_sec = 1000, var_type = 'double')\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 22\u001b[1;33m     \u001b[0mlogger\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mregister\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Itq_d vd_ref'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msamples_per_sec\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0msampling\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvar_type\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'double'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m~\\Zhouzhou_AMDC\\AMDC-Firmware\\scripts\\AMDC_Logger.py\u001b[0m in \u001b[0;36mregister\u001b[1;34m(self, log_vars, samples_per_sec, var_type)\u001b[0m\n\u001b[0;32m     76\u001b[0m                     \u001b[1;31m#send command to AMDC\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     77\u001b[0m                     \u001b[0mcmd\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34mf'log reg {LV.index} {LV.name} {LV.memory_addr} {LV.samples_per_sec} {LV.var_type}'\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 78\u001b[1;33m                     \u001b[0mout\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mamdc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcmd\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcmd\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     79\u001b[0m                     \u001b[1;32mif\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m'FAILURE'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     80\u001b[0m                         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_pop\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mLV\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Zhouzhou_AMDC\\AMDC-Firmware\\scripts\\AMDC.py\u001b[0m in \u001b[0;36mcmd\u001b[1;34m(self, cmd_str)\u001b[0m\n\u001b[0;32m     55\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     56\u001b[0m         \u001b[1;31m# Wait for cmd to execute on AMDC\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 57\u001b[1;33m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcmdDelay\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     58\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     59\u001b[0m         \u001b[1;31m# Print log for user\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [
+    "\r\n",
+    "    \r\n",
     "\r\n",
     "    logger.unregister_all()\r\n",
     "    #logger.register('Ia1_a Ia1_b Ia1_c Ib1_a Ib1_b Ib1_c Ia2_a Ia2_b Ia2_c Ib2_a Ib2_b Ib2_c', samples_per_sec = 1000, var_type = 'double')\r\n",
