--- a/My_C_Code/Scripts/BIM_SysID.ipynb
+++ b/My_C_Code/Scripts/BIM_SysID.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,23 @@
      "output_type": "stream",
      "text": [
       "\t> BIM init\n",
-      "['BIM initENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n",
+      "['BIM initENC:\\tSetting pulses per rev bits = 10...', '', 'SUCCESS']\n"
+     ]
+    }
+   ],
+   "source": [
+    "cmd.BIM_init()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\t> BIM set_vdc_tq 100.000000\n",
       "['BIM set_vdc_tq 100.000000', 'SUCCESS']\n",
       "\t> BIM set_vdc_s1 80.000000\n",
@@ -101,12 +117,11 @@
       "\t> BIM enable_ctrl\n",
       "['BIM enable_ctrl', 'SUCCESS']\n",
       "\t> hw pwm on\n",
-      "['hw pwm on', 'SUCCESS']\n"
+      "['hw pwm on', 'FAILURE']\n"
      ]
     }
    ],
    "source": [
-    "cmd.BIM_init()\n",
     "cmd.BIM_set_Vdc_tq(100)\n",
     "cmd.BIM_set_Vdc_s1(80)\n",
     "cmd.BIM_set_id(2)\n",
@@ -124,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -174,6 +189,7 @@
       "###################   AMDC LOGGER INFO   ###################\n",
       "\n",
       "Variable Name:      Index:         Type:         Sample Rate [Hz]:    Number of Samples:\n",
+      "LOG_theta_rm          0            double              1000.0              58680     \n",
       "\n",
       "\t> twin enable_log\n",
       "['twin enable_log', 'SUCCESS']\n"
@@ -201,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -210,57 +226,16 @@
      "text": [
       "\t> log unreg 0\n",
       "['log unreg 0', 'SUCCESS']\n",
-      "\t> log unreg 1\n",
-      "['log unreg 1', 'SUCCESS']\n",
-      "\t> log unreg 2\n",
-      "['log unreg 2', 'SUCCESS']\n",
-      "\t> log unreg 3\n",
-      "['log unreg 3', 'SUCCESS']\n",
-      "\t> log reg 0 LOG_delta_x 1249624 500 double\n",
-      "['log reg 0 LOG_delta_x 1249624 500 double', 'SUCCESS']\n",
-      "\t> log reg 1 LOG_delta_y 1249632 500 double\n",
-      "['log reg 1 LOG_delta_y 1249632 500 double', 'SUCCESS']\n",
-      "\t> log reg 2 LOG_F_x 1249640 500 double\n",
-      "['log reg 2 LOG_F_x 1249640 500 double', 'SUCCESS']\n",
-      "\t> log reg 3 LOG_F_y 1249648 500 double\n",
-      "['log reg 3 LOG_F_y 1249648 500 double', 'SUCCESS']\n",
+      "\t> log reg 0 LOG_theta_rm 1250584 500 double\n",
+      "['log reg 0 LOG_theta_rm 1250584 500 double', 'SUCCESS']\n",
       "\t> log info\n",
       "###################   AMDC LOGGER INFO   ###################\n",
       "\n",
       "Variable Name:      Index:         Type:         Sample Rate [Hz]:    Number of Samples:\n",
-      "LOG_delta_x           0            double              500.0                 0       \n",
-      "LOG_delta_y           1            double              500.0                 0       \n",
-      "LOG_F_x               2            double              500.0                 0       \n",
-      "LOG_F_y               3            double              500.0                 0       \n",
+      "LOG_theta_rm          0            double              500.0                 0       \n",
       "\n",
       "\t> log start\n",
-      "['log start', 'SUCCESS']\n",
-      "\t> log stop\n",
-      "['log stop', 'SUCCESS']\n",
-      "\t> log dump bin 0\n",
-      "Dumping: LOG_delta_x\n",
-      "Dump took: 2.844  sec\n",
-      "Dump rate: 1824.461  sps\n",
-      "Num samples: 5188 \n",
-      "\n",
-      "\t> log dump bin 1\n",
-      "Dumping: LOG_delta_y\n",
-      "Dump took: 2.869  sec\n",
-      "Dump rate: 1808.432  sps\n",
-      "Num samples: 5188 \n",
-      "\n",
-      "\t> log dump bin 2\n",
-      "Dumping: LOG_F_x\n",
-      "Dump took: 2.933  sec\n",
-      "Dump rate: 1768.663  sps\n",
-      "Num samples: 5188 \n",
-      "\n",
-      "\t> log dump bin 3\n",
-      "Dumping: LOG_F_y\n",
-      "Dump took: 2.865  sec\n",
-      "Dump rate: 1811.055  sps\n",
-      "Num samples: 5188 \n",
-      "\n"
+      "['log start', 'SUCCESS']\n"
      ]
     }
    ],
@@ -271,12 +246,36 @@
     "\n",
     "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q va1_ref vb1_ref vc1_ref va2_ref vb2_ref vc2_ref', samples_per_sec = 1000, var_type = 'double')\n",
     "#logger.register('delta_x delta_y F_x F_y Is1_x Is1_y Is1_x_ref Is1_y_ref Itq_d_ref Itq_q_ref Itq_d Itq_q wrm_ref wrm', samples_per_sec = 5000, var_type = 'double')\n",
-    "logger.register('delta_x delta_y F_x F_y' , samples_per_sec = 500, var_type = 'double')\n",
+    "#logger.register('delta_x delta_y F_x F_y' , samples_per_sec = 500, var_type = 'double')\n",
+    "logger.register('theta_rm' , samples_per_sec = 500, var_type = 'double')\n",
     "# View which variables are logged\n",
     "logger.info()\n",
     "\n",
     "logger.start()\n",
-    "time.sleep(10)\n",
+    "#time.sleep(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t> log stop\n",
+      "['log stop', 'SUCCESS']\n",
+      "\t> log dump bin 0\n",
+      "Dumping: LOG_theta_rm\n",
+      "Dump took: 4.743  sec\n",
+      "Dump rate: 1881.652  sps\n",
+      "Num samples: 8924 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "logger.stop()\n",
     "\n",
     "####################   DUMP DATA AND PLOT   ####################\n",
@@ -322,9 +321,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t> log empty_all\n",
+      "['log empty_all', 'SUCCESS']\n",
+      "\t> log start\n",
+      "['log start', 'FAILURE']\n",
+      "\t> log stop\n",
+      "['log stop', 'SUCCESS']\n",
+      "\t> log dump bin 0\n",
+      "Dumping: LOG_theta_rm\n",
+      "Dump took: 0.696  sec\n",
+      "Dump rate: 1129.248  sps\n",
+      "Num samples: 786 \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "###################   COLLECT DATA   ####################\n",
@@ -698,6 +716,67 @@
     "    ####################   DUMP DATA AND PLOT   ####################\n",
     "    filename = 'BIM_data_id_ix'+ str(i)+'.csv'\n",
     "    data = logger.dump(file = filename)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\t> hw pwm off\n",
+      "['hw pwm off', 'SUCCESS']\n",
+      "\t> BIM disable_levctrl\n",
+      "['BIM disable_levctrl', 'SUCCESS']\n",
+      "\t> BIM disable_ob\n",
+      "['BIM disable_ob', 'SUCCESS']\n",
+      "\t> BIM disable_vctrl\n",
+      "['BIM disable_vctrl', 'SUCCESS']\n",
+      "\t> inj const vd_ref set 0\n",
+      "['inj const vd_ref set 0', 'SUCCESS']\n",
+      "\t> inj const vq_ref set 0\n",
+      "['inj const vq_ref set 0', 'SUCCESS']\n",
+      "\t> inj const vx_ref set 0\n",
+      "['inj const vx_ref set 0', 'SUCCESS']\n",
+      "\t> inj const vy_ref set 0\n",
+      "['inj const vy_ref set 0', 'SUCCESS']\n",
+      "\t> inj const Fx_ref set 0\n",
+      "['inj const Fx_ref set 0', 'SUCCESS']\n",
+      "\t> inj const Fy_ref set 0\n",
+      "['inj const Fy_ref set 0', 'SUCCESS']\n",
+      "\t> inj const wrm_ref set 0\n",
+      "['inj const wrm_ref set 0', 'SUCCESS']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['inj const wrm_ref set 0', 'SUCCESS']"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmd.disable_pwm()\n",
+    "cmd.BIM_disable_levctrl()\n",
+    "cmd.BIM_disable_ob()\n",
+    "cmd.BIM_disable_vctrl()\n",
+    "\n",
+    "amdc.cmd(\"inj const vd_ref set 0\")\n",
+    "amdc.cmd(\"inj const vq_ref set 0\")\n",
+    "amdc.cmd(\"inj const vx_ref set 0\")\n",
+    "amdc.cmd(\"inj const vy_ref set 0\")\n",
+    "amdc.cmd(\"inj const Fx_ref set 0\")\n",
+    "amdc.cmd(\"inj const Fy_ref set 0\")\n",
+    "amdc.cmd(\"inj const wrm_ref set 0\")\n",
+    "\n",
+    "cmd.enable_pwm()"
    ]
   },
   {
